<resources>
    <string name="app_name">Exam Management System</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="password">Password</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="login_button">Login Button</string>
    <string name="register">Register</string>
    <string name="register_button">Register Button</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_message">Welcome, Teacher 🎉 !</string>
    <string name="welcome">🥳 Welcome 🎉 !</string>
    <string name="exams_created">Exams Created</string>
    <string name="upcoming_exams">Exams</string>
    <string name="pending_evaluations">Pending Evaluations</string>
    <string name="assignments">Assignments</string>
    <string name="grades">Grades</string>
    <string name="view_assignments">View Assignments</string>
    <string name="view_exams">View Exams</string>
    <string name="view_grades">View Grades</string>
    <string name="student_actions">Student Actions</string>
    <string name="placeholder_count">0</string>
    <string name="exam_management">Exam Management</string>
    <string name="student_evaluation">Student Evaluation</string>
    <string name="communication">Communication</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="dashboard_actions">Dashboard Actions</string>
    <string name="create_exam">Create Exam</string>
    <string name="exam_list">Exam List</string>
    <string name="exam_title">Exam Title</string>
    <string name="exam_date">Exam Date</string>
    <string name="exam_duration">Exam Duration (minutes)</string>
    <string name="create_exam_button">Create Exam</string>
    <string name="notifications">Notifications</string>
    <string name="attendance">Attendance</string>
    <string name="exams">Exams</string>
    <string name="view_attendance">View Attendance</string>
    <string name="total_students">Total Students</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="create_exam_framework">Create Exam Framework</string>
    <string name="save_exam">Save Exam</string>
    <string name="add_question">Add Question</string>
    <string name="question_text">Question Text</string>
    <string name="question_answer">Answer</string>

    <string name="question_options">Question Options</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="add_option">Add Option</string>
    <string name="answer">Answer</string>

    <string-array name="question_types">
        <item>Multiple Choice</item>
        <item>True/False</item>
        <item>Short Answer</item>
    </string-array>


        <string name="true_option">True</string>
        <string name="false_option">False</string>

    <string name="edit_question">Edit Question</string>
    <string name="delete_question">Delete Question</string>

    <string name="answer_hint">Answer Hint</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="delete_exam">Delete Exam</string>


</resources>