<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_text"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/spinner_question_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/question_types" />

    <LinearLayout
        android:id="@+id/ll_question_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_options"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <EditText
            android:id="@+id/et_option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option_1" />

        <EditText
            android:id="@+id/et_option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option_2" />

        <Button
            android:id="@+id/btn_add_option"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_option" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:inputType="textMultiLine"
        android:visibility="gone" />

</LinearLayout>
